--- a/dai23.html
+++ b/dai23.html
@@ -39,7 +39,7 @@
         </td>
    </tr>
   </table>
-          <h2>第２回検証授業「振り返り」型の展開</h2>
+          <h2>第２回検証授業「総括振り返り」型の展開</h2>
          <table border="1"cellspacing="0" bordercolor="#333" width="98%">
          <tr align="center">
              <th width="20%"><b>学習活動</b></th>
@@ -49,7 +49,7 @@
          </tr>  
          <tr>
               <td>１.本時の見通しをもつ<br>（３分）</td>
-              <td><ul><li>本時の流れをつかませる。<li><ul><li>プログラムの説明し，概要をつかませる。<li>プログラム通りに作らせる。<li>完成した児童には，友達の手助けを促す。</ul></ul></td>
+              <td><ul><li>本時の流れをつかませる。<ul><li>プログラムの説明し，概要をつかませる。<li>プログラム通りに作らせる。<li>完成した児童には，友達の手助けを促す。</ul></ul></td>
               <td></td>
               <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
          </tr>
@@ -126,7 +126,7 @@
          </tr> 
             <tr>
               <td>１.本時の見通しをもつ<br>（３分）</td>
-              <td><ul><li>本時の流れをつかませる。<li><ul><li>プログラムの説明し，概要をつかませる。<li>プログラム通りに作らせる。<li>完成した児童には，友達の手助けを促す。</ul></ul></td>
+              <td><ul><li>本時の流れをつかませる。<ul><li>プログラムの説明し，概要をつかませる。<li>プログラム通りに作らせる。<li>完成した児童には，友達の手助けを促す。</ul></ul></td>
               <td></td>
               <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
          </tr>
