--- a/reidaiwriai.html
+++ b/reidaiwriai.html
@@ -57,7 +57,7 @@
     
     </tr>
   </table>
-   <div><img src="https://tkby.github.io/micra.github.io/.jpg" alt="例題グラフ" width="75%"></div>
+   <div><img src="https://tkby.github.io/micra.github.io/reidaiwariai.jpg" alt="例題グラフ" width="75%"></div>
      
            </tr>
   </li>
