--- a/reidaiwriai.html
+++ b/reidaiwriai.html
@@ -37,7 +37,7 @@
         </td>    
         <td><img src="https://tkby.github.io/micra.github.io/baburumegane.jpg" width="100%"></td>
     
-        <td><video src="https://tkby.github.io/micra.github.io/palkussuto.MP4" controls muted  autoplay loop width="100%">
+        <td><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
         </td>    
