--- a/reidaiwriai.html
+++ b/reidaiwriai.html
@@ -47,13 +47,13 @@
                  <p>動画を再生できません。</p>
            </video>
         </td>       
-        <td><img src="https://tkby.github.io/micra.github.io/kakijun.jpg" width="100%"></td>
+        <td><img src="https://tkby.github.io/micra.github.io/kakijunmegane.jpg" width="100%"></td>
     
         <td><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
         </td>
-         <td><img src="https://tkby.github.io/micra.github.io/mogura.jpg" width="100%"></td>
+         <td><img src="https://tkby.github.io/micra.github.io/moguramegane.jpg" width="100%"></td>
     
     </tr>
   </table>
