--- a/V2kosatsu1.html
+++ b/V2kosatsu1.html
@@ -53,12 +53,12 @@
              <th width="5%"><b>設問</b></th>
              <th width="10%"><b>分類</b></th>
              <th width="20%"><b>内容</b></th>         
-             <th width="7%"><b>対象人数(５月）</b></th>
-             <th width="7%"><b>平均(５月）</b></th>   
-             <th width="7%"><b>標準偏差(５月）</b></th>
-             <th width="7%"><b>対象人数（11月）</b></th>
-             <th width="7%"><b>平均(11月）</b></th> 
-             <th width="7%"><b>標準偏差(11月）</b></th>
+             <th width="7%"><b>対象人数<br>(５月）</b></th>
+             <th width="7%"><b>平均<br>(５月）</b></th>   
+             <th width="7%"><b>標準偏差<br>(５月）</b></th>
+             <th width="7%"><b>対象人数<br>（11月）</b></th>
+             <th width="7%"><b>平均<br>(11月）</b></th> 
+             <th width="7%"><b>標準偏差<br>(11月）</b></th>
              <th width="7%"><b>差</b></th>
              <th width="8%"><b>p値</b></th>
              <th width="8%"><b>効果量d</b></th>
