--- a/V2kosatsu1.html
+++ b/V2kosatsu1.html
@@ -52,7 +52,8 @@
            <tr align="center">
              <th width="5%"><b>設問</b></th>
              <th width="10%"><b>分類</b></th>
-             <th width="20%"><b>内容</b></th>         
+             <th width="15%"><b>内容</b></th>  
+             <th width="7%"><b>学年</b></th>
              <th width="7%"><b>対象人数<br>(５月）</b></th>
              <th width="7%"><b>平均<br>(５月）</b></th>   
              <th width="7%"><b>標準偏差<br>(５月）</b></th>
@@ -60,8 +61,8 @@
              <th width="7%"><b>平均<br>(11月）</b></th> 
              <th width="7%"><b>標準偏差<br>(11月）</b></th>
              <th width="7%"><b>差</b></th>
-             <th width="8%"><b>p値</b></th>
-             <th width="8%"><b>効果量d</b></th>
+             <th width="7%"><b>p値</b></th>
+             <th width="7%"><b>効果量d</b></th>
            
                 </tr>
   
@@ -111,6 +112,20 @@
    <td><b>*d=0.52</b></td>
   </tr>
     
+     <tr>
+   <td>第５，６学年</td>
+   <td>第５，６学年</td>
+   <td>第５，６学年</td>
+   <td>第５，６学年</td>
+   <td>第５，６学年</td>
+   <td>第５，６学年</td>
+   <td>第５，６学年</td>
+   <td>第５，６学年</td> 
+   <td>第５，６学年</td> 
+   <td>第５，６学年</td>
+   <td>第５，６学年</td>
+   <td>第５，６学年</td>
+  </tr>
      <tr>
    <td>35</td>
    <td>表現力・伝達力</td>
