--- a/projoche.html
+++ b/projoche.html
@@ -112,6 +112,22 @@
    </tr>
   </table>
        
+       <table border="1"cellspacing="0" bordercolor="#333" width="98%">
+   <tr align="center">
+              <th width="10%"><b>事前結果（５月）</b></th>
+              <th width="10%"><b>事後結果（11月）</b></th>
+              <th width="80%">検証方法</th>
+           
+                </tr>
+        <tr>
+         <td>５月に行った，第１回情報活用能力チェックリストの問15～問35のデータを基にする。</td>
+         <td>11月半ばに行った，第２回第１回情報活用能力チェックリストの問15～問35のデータが，第１回からどのように変化したかをt検定を行い，p<0.05で有意差有りとする。</td>
+         <td><img src="https://tkby.github.io/micra.github.io/excelTtest.jpg" width="100%" alt="t検定" ><br><p>欠席者等があったので，「等分散を仮定とする２標本による検定」</td>
+        </tr>
+        <tr>
+        <td>５月に行った，第１回情報活用能力チェックリストの問15～問35のデータを基にする。</td>
+        <td>11月半ばに行った，第２回第１回情報活用能力チェックリストの問15～問35のデータが，第１回からどのように変化したかを効果量dを算出し，d>=0.4で，効果有りとする。</td>
+        <td><img src="https://tkby.github.io/micra.github.io/effectsize.jpg" width="100%" alt="効果量" ></td>
     </li>
  </ul>
 
