--- a/projoche.html
+++ b/projoche.html
@@ -122,12 +122,12 @@
         <tr>
          <td>５月に行った，第１回情報活用能力チェックリストの問15～問35のデータを基にする。</td>
          <td>11月半ばに行った，第２回第１回情報活用能力チェックリストの問15～問35のデータが，第１回からどのように変化したかをt検定を行い，p<0.05で有意差有りとする。</td>
-         <td><img src="https://tkby.github.io/micra.github.io/excelTtest.jpg" width="100%" alt="t検定" ><br><p>欠席者等があったので，「等分散を仮定とする２標本による検定」</td>
+         <td><img src="https://tkby.github.io/micra.github.io/excelTtest.jpg" width="100%" alt="t検定" ><br><p>エクセルのデータ分析を活用した。欠席者を考慮し「等分散を仮定とする２標本による検定」を行った。</td>
         </tr>
         <tr>
         <td>５月に行った，第１回情報活用能力チェックリストの問15～問35のデータを基にする。</td>
-        <td>11月半ばに行った，第２回第１回情報活用能力チェックリストの問15～問35のデータが，第１回からどのように変化したかを効果量dを算出し，d>=0.4で，効果有りとする。</td>
-        <td><img src="https://tkby.github.io/micra.github.io/effectsize.jpg" width="100%" alt="効果量" ></td>
+        <td>11月半ばに行った，第２回第１回情報活用能力チェックリストの問15～問35のデータが，第１回からどのように変化したかを効果量dを算出し，d>=0.4で，効果有りとした。</td>
+        <td><img src="https://tkby.github.io/micra.github.io/effectsize.jpg" width="100%" alt="効果量" ><br>欠席者を考慮し，各群の人数が違う場合の計算式で算出した。（計算式の画像は<a href ="http://mizumot.com/handbook/?page_id=169">水本篤氏の効果量についてのサイト</a>のものを使用）</td>
     </li>
  </ul>
 
