--- a/projoche.html
+++ b/projoche.html
@@ -113,7 +113,7 @@
   </table>
        
        <table border="1"cellspacing="0" bordercolor="#333" width="98%">
-   <tr align="center">
+       <tr align="center">
               <th width="10%"><b>事前結果（５月）</b></th>
               <th width="10%"><b>事後結果（11月）</b></th>
               <th width="80%">検証方法</th>
@@ -128,7 +128,8 @@
         <td>５月に行った，第１回情報活用能力チェックリストの問15～問35のデータを基にする。</td>
         <td>11月半ばに行った，第２回第１回情報活用能力チェックリストの問15～問35のデータが，第１回からどのように変化したかを効果量dを算出し，d>=0.4で，効果有りとした。</td>
         <td><img src="https://tkby.github.io/micra.github.io/effectsize.jpg" width="100%" alt="効果量" ><br>欠席者を考慮し，各群の人数が違う場合の計算式で算出した。（計算式の画像は<a href ="http://mizumot.com/handbook/?page_id=169">水本篤氏の効果量についてのサイト</a>のものを使用）</td>
-    </li>
+        </table>
+     </li>
  </ul>
 
     </body>
