--- a/prograjittaichosa.html
+++ b/prograjittaichosa.html
@@ -135,7 +135,7 @@
       
            <tr>
             <td>対象</td>
-            <td>U市立F小学校　第１～４学年と教員</td>
+            <td>U市立F小学校　第１～４学年</td>
             <td>U市立F小学校　第３，４学年</td>
            </tr>
       
