--- a/oyowariai.html
+++ b/oyowariai.html
@@ -19,10 +19,12 @@
   <li>
    <h1>（３）応用テストプログラム完成率より</h1>
    <div><img src="https://tkby.github.io/micra.github.io/oyoprogram.jpg" alt="応用テストプログラム" width="50%"></div>
-   
-   
-   
-   
+   <table border="1"cellspacing="0" bordercolor="#333" width="98%">
+    <tr align="center">
+                <th width="25%"><b>第１回検証授業　例題プログラム</b></th>
+                <th width="25%"><b>第２回検証授業　例題プログラム</b></th>
+                <th width="25%"><b>第３回検証授業　例題プログラム</b></th>
+                <th width="25%"><b>第４回検証授業　例題プログラム</b></th>  
    <tr>
             <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
