--- a/oyowariai.html
+++ b/oyowariai.html
@@ -38,10 +38,11 @@
                  <p>動画を再生できません。</p>
                 </video></td>       
         
-             <td><video src="https://tkby.github.io/micra.github.io/pakupaku.MP4" controls muted  autoplay loop width="100%">
+             <td><video src="https://tkby.github.io/micra.github.io/waniwani.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
               </video></td>
      </tr>
+   </table>
    <div><img src="https://tkby.github.io/micra.github.io/oyowariai.jpg" alt="応用テストグラフ" width="75%"></div>
      
            </tr>
