--- a/oyowariai.html
+++ b/oyowariai.html
@@ -21,10 +21,10 @@
    <div><img src="https://tkby.github.io/micra.github.io/oyoprogram.jpg" alt="応用テストプログラム" width="50%"></div>
    <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
-                <th width="25%"><b>第１回検証授業　例題プログラム</b></th>
-                <th width="25%"><b>第２回検証授業　例題プログラム</b></th>
-                <th width="25%"><b>第３回検証授業　例題プログラム</b></th>
-                <th width="25%"><b>第４回検証授業　例題プログラム</b></th>  
+                <th width="25%"><b>第１回検証授業　応用テストプログラム</b></th>
+                <th width="25%"><b>第２回検証授業　応用テストプログラム</b></th>
+                <th width="25%"><b>第３回検証授業　応用テストプログラム</b></th>
+                <th width="25%"><b>第４回検証授業　応用テストプログラム</b></th>  
    <tr>
             <td><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
