--- a/dai14.html
+++ b/dai14.html
@@ -91,7 +91,7 @@
            </tr>
            <tr>
               <td>５．応用テストプログラム<br>（５分）</td>
-              <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。</ul></td>
+              <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。<li>実際に行う際には，「今日取り組んだプログラムを思い出しながらチェレンジしてみよう！」と伝え，「テスト」という言葉を使用しないように配慮する。<li>本研究では位置づけ上「応用テスト」としている。</ul></td>
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
   </table> 
@@ -167,7 +167,7 @@
            </tr>
            <tr>
               <td>５．応用テストプログラム<br>（５分）</td>
-              <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。</ul></td>
+              <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。<li>実際に行う際には，「今日取り組んだプログラムを思い出しながらチェレンジしてみよう！」と伝え，「テスト」という言葉を使用しないように配慮する。<li>本研究では位置づけ上「応用テスト」としている。</ul></td>
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
   </table> 
