--- a/pgmskill.html
+++ b/pgmskill.html
@@ -18,7 +18,7 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>④プログラミングスキルチェック</h1>
-   <p>先行研究では，未就学児は命令を理解し，適切にプログラミングを使った表現ができる（渡辺勇士：2021）と示している。渡辺の研究では，難易度を考慮し条件分岐を含むプログラムを扱っていないが，本研究では，条件分岐を含むプログラムも取り入れた上で，小学校の第１学年～第４学年を対象として全く同じプログラムを例題として設定した。４回検証授業で，４つの例題プログラムに取り組み，４つの応用プログラムに取り組んだ。その検証授業の事前事後の児童のスキルの変容を掴むために作成したのが「プログラミングスキルチェック」である。</p>
+   <p>先行研究では，未就学児は命令を理解し，適切にプログラミングを使った表現ができる（渡辺勇士：2021）と示している。渡辺の研究では，未就学児対象ということで，難易度を考慮し条件分岐を含むプログラムを扱っていないが，本研究では，条件分岐を含むプログラムも取り入れた上で，小学校の第１学年～第４学年を対象として全く同じプログラムを例題として設定した。４回検証授業で，４つの例題プログラムに取り組み，４つの応用プログラムに取り組んだ。その検証授業の事前事後の児童のスキルの変容を掴むために作成したのが「プログラミングスキルチェック」である。</p>
     <img src="https://tkby.github.io/micra.github.io/pgmskilcheck.jpg" alt="プログラミングスキルチェック" width="40%"><img src="https://tkby.github.io/micra.github.io/pgmskillcheck2.jpg" alt="プログラミングスキルチェック2" width="40%">
    <h2>プログラミングスキルチェックの設問別の解説</h2>       
    <table border="1"cellspacing="0" bordercolor="#333" width="98%">
