--- a/sogonagare.html
+++ b/sogonagare.html
@@ -17,7 +17,7 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-   <h1>(1)「評価・改善する『情報活用能力』」の高まり
+   <h1>(1)「評価・改善する『情報活用能力』」の高まり</h1>
     <h2>第２回情報活用能力チェックリスト（設問15～35:第３，４学年）</h2>
    <p>第３，４学年ともに，５月に比べ，設問15～35の「問題解決・探究における情報活用」の平均スコアは上昇した。</p>
         <table border="1"cellspacing="0" bordercolor="#333" width="98%">
