--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -190,7 +190,14 @@
           
          <tr>
          <td>11月完成後（上空から）<br><img src="https://tkby.github.io/micra.github.io/11gatsujoku.jpg" alt="八町大路完成" width="100%"></td>
-         <td></td>
+         <td><img src="https://tkby.github.io/micra.github.io/1101.jpg" alt="八町大路完成1" width="45%">
+             <img src="https://tkby.github.io/micra.github.io/1102.jpg" alt="八町大路完成2" width="45%">
+           <img src="https://tkby.github.io/micra.github.io/1103.jpg" alt="八町大路完成3" width="45%">
+           <img src="https://tkby.github.io/micra.github.io/1104.jpg" alt="八町大路完成4" width="45%">
+           <img src="https://tkby.github.io/micra.github.io/1105.jpg" alt="八町大路完成5" width="45%">
+           <img src="https://tkby.github.io/micra.github.io/1106.jpg" alt="八町大路完成6" width="45%">
+           <img src="https://tkby.github.io/micra.github.io/1107.jpg" alt="八町大路完成7" width="45%">
+         </td>
      </tr>
           
       <tr>
