--- a/kagami.html
+++ b/kagami.html
@@ -42,6 +42,8 @@ img{
           <h2>要旨<a href ="https://tkby.github.io/micra.github.io/youshi.html">→</a></h2>
             <h3>Ⅰ研究の背景と目的</h3>
                 <ul><li><h3>1 研究の背景<a href ="https://tkby.github.io/micra.github.io/kenkyuhaikei.html">→</a></h3>
+                  <a href ="https://tkby.github.io/micra.github.io/kenkyuhaikei.html"><img src="https://tkby.github.io/micra.github.io/icon01.jpg" alt="国内動向" width="45%"></a> 
+                
                            <ul>(1)情報活用能力に関する現状</a>
                                <li>①国内の動向
                                <li>②「情報活用能力」に関する所属校児童の実態
