--- a/kagami.html
+++ b/kagami.html
@@ -54,7 +54,7 @@ img{
                             </ul>
                 </ul>
             <h3>2 研究の目的<a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html">→詳細はコチラ</a></h3>
-    <a href ="https://tkby.github.io/micra.github.io/kenkyuhaikei.html"><img src="https://tkby.github.io/micra.github.io/icon04.jpg" alt="研究目的" width="10%"></a> 
+    <a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html"><img src="https://tkby.github.io/micra.github.io/icon04.jpg" alt="研究目的" width="10%"></a> 
                 
             <h3>3 先行研究<a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html">→</a></h3>
                              <ul>
