--- a/kagami.html
+++ b/kagami.html
@@ -56,7 +56,12 @@ img{
             <h3>2 研究の目的<a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html">→詳細はコチラ</a></h3>
     <a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html"><img src="https://tkby.github.io/micra.github.io/icon04.jpg" alt="研究目的" width="10%"></a> 
                 
-            <h3>3 先行研究<a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html">→</a></h3>
+            <h3>3 先行研究<a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html">→詳細はコチラ</a></h3>
+   <a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html"><img src="https://tkby.github.io/micra.github.io/icon05.jpg" alt="先行研究1" width="10%"></a> 
+   <a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html"><img src="https://tkby.github.io/micra.github.io/icon06.jpg" alt="先行研究2" width="10%"></a> 
+  <a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html"><img src="https://tkby.github.io/micra.github.io/icon07.jpg" alt="先行研究2.5" width="10%"></a> 
+  <a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html"><img src="https://tkby.github.io/micra.github.io/icon08.jpg" alt="先行研究3" width="10%"></a> 
+ 
                              <ul>
                                  <li>(1)ICT活用について
                                  <li>(2)「評価・改善する『情報活用能力』」について
