--- a/kagami.html
+++ b/kagami.html
@@ -71,6 +71,8 @@ img{
  
                             </ul>
              <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/kasetsu.html">→</a></h3>
+             <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon09.jpg" alt="仮説" width="10%"></a><div> 
+ 
              <h3>Ⅲ　研究の方法と内容</h3>
              <h3>Ⅲ-1 プログラミングの学習活動について</h3>
    <p>活動の概要説明<a href ="https://tkby.github.io/micra.github.io/reidaimovie.html">→</a></p>
