--- a/kagami.html
+++ b/kagami.html
@@ -54,28 +54,30 @@ img{
                             </ul>
                 </ul>
             <h3>2 研究の目的<a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html">→詳細はコチラ</a></h3>
-    <div><a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html"><img src="https://tkby.github.io/micra.github.io/icon04.jpg" alt="研究目的" width="10%"></a><div>
+    <div><a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html"><img src="https://tkby.github.io/micra.github.io/icon04.jpg" alt="研究目的" width="10%"></a></div>
                 
             <h3>3 先行研究<a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html">→詳細はコチラ</a></h3>
                                <ul>
                                  <li>(1)ICT活用について
-                                     <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon05.jpg" alt="先行研究1" width="10%"></a><div> 
+                                     <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon05.jpg" alt="先行研究1" width="10%"></a></div> 
 
                                  <li>(2)「評価・改善する『情報活用能力』」について
-                                    <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon06.jpg" alt="先行研究2" width="10%"></a><div> 
+                                    <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon06.jpg" alt="先行研究2" width="10%"></a></div> 
 <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon07.jpg" alt="先行研究2.5" width="10%"></a><div> 
 
                                  <li>(3)効果の検証・制作物の分析について
-                                     <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon08.jpg" alt="先行研究3" width="10%"></a><div> 
+                                     <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon08.jpg" alt="先行研究3" width="10%"></a></div> 
  
  
                             </ul>
              <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/kasetsu.html">→</a></h3>
-             <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon09.jpg" alt="仮説" width="10%"></a><div> 
+             <div><a href ="https://tkby.github.io/micra.github.io/kasetsu.html"><img src="https://tkby.github.io/micra.github.io/icon09.jpg" alt="仮説" width="10%"></a></div> 
  
              <h3>Ⅲ　研究の方法と内容</h3>
              <h3>Ⅲ-1 プログラミングの学習活動について</h3>
    <p>活動の概要説明<a href ="https://tkby.github.io/micra.github.io/reidaimovie.html">→</a></p>
+                <div><a href ="https://tkby.github.io/micra.github.io/reidaimovie.html"><img src="https://tkby.github.io/micra.github.io/icon10.jpg" alt="概要プ" width="10%"></a></div> 
+ 
                   <ul>
                       <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/prograjittaichosa.html">→</a>
                       <li>(2)検証授業(第１回～４回）<a href ="https://tkby.github.io/micra.github.io/prograkensho.html">→</a>
