--- a/kagami.html
+++ b/kagami.html
@@ -70,74 +70,79 @@ img{
  
  
                             </ul>
-             <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/kasetsu.html">→</a></h3>
+             <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/kasetsu.html">→詳細はコチラ</a></h3>
              <div><a href ="https://tkby.github.io/micra.github.io/kasetsu.html"><img src="https://tkby.github.io/micra.github.io/icon09.jpg" alt="仮説" width="10%"></a></div> 
  
              <h3>Ⅲ　研究の方法と内容</h3>
              <h3>Ⅲ-1 プログラミングの学習活動について</h3>
-   <p>活動の概要説明<a href ="https://tkby.github.io/micra.github.io/reidaimovie.html">→</a></p>
-                <div><a href ="https://tkby.github.io/micra.github.io/reidaimovie.html"><img src="https://tkby.github.io/micra.github.io/icon10.jpg" alt="概要プ" width="10%"></a></div> 
+   <p>活動の概要説明<a href ="https://tkby.github.io/micra.github.io/reidaimovie.html">→詳細はコチラ</a></p>
+               <div><a href ="https://tkby.github.io/micra.github.io/reidaimovie.html"><img src="https://tkby.github.io/micra.github.io/icon10.jpg" alt="概要プ" width="10%"></a></div> 
  
                   <ul>
-                      <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/prograjittaichosa.html">→</a>
-                      <li>(2)検証授業(第１回～４回）<a href ="https://tkby.github.io/micra.github.io/prograkensho.html">→</a>
+                      <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/prograjittaichosa.html">→詳細はコチラ</a>
+                          
+                                             <li>(2)検証授業(第１回～４回）<a href ="https://tkby.github.io/micra.github.io/prograkensho.html">→詳細はコチラ</a>
+                           <div><a href ="https://tkby.github.io/micra.github.io/prograkensho.html"><img src="https://tkby.github.io/micra.github.io/icon11.jpg" alt="検証授業プ" width="10%"></a></div> 
+ 
                       <li>(3)検証方法
+                           <div><img src="https://tkby.github.io/micra.github.io/icon12.jpg" alt="検証方法プ" width="10%"></div> 
+ 
                          <ul>
-                             <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
-                             <li>②例題プログラム<a href ="https://tkby.github.io/micra.github.io/reidaipgm.html">→</a>
-                             <li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/oyopgm.html">→</a>
-                             <li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/pgmskill.html">→</a>
+                             <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→詳細はコチラ</a>
+                             <li>②例題プログラム<a href ="https://tkby.github.io/micra.github.io/reidaipgm.html">→詳細はコチラ</a>
+                             <li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/oyopgm.html">→詳細はコチラ</a>
+                             <li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/pgmskill.html">→詳細はコチラ</a>
                              <li>⑤授業観察・制作物
                          </ul>
                   </ul>
    
              <h3>Ⅳ-1 結果</h3>
                    <ul>
-                       <li>(1)情報活用能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/34joche.html">→</a>
-                       <li>(2)例題とプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/reidaiwriai.html">→</a>
-                       <li>(3)応用テストプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/oyowariai.html">→</a>
-                       <li>(4)プログラミングスキルチェックより<a href ="https://tkby.github.io/micra.github.io/pgmskillscore.html">→</a>
-                       <li>(5)授業観察・制作物より<a href ="https://tkby.github.io/micra.github.io/IV1_5.html">→</a>
+                       <li>(1)情報活用能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/34joche.html">→詳細はコチラ</a>
+                       <li>(2)例題とプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/reidaiwriai.html">→詳細はコチラ</a>
+                       <li>(3)応用テストプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/oyowariai.html">→詳細はコチラ</a>
+                       <li>(4)プログラミングスキルチェックより<a href ="https://tkby.github.io/micra.github.io/pgmskillscore.html">→詳細はコチラ</a>
+                       <li>(5)授業観察・制作物より<a href ="https://tkby.github.io/micra.github.io/IV1_5.html">→詳細はコチラ</a>
                    </ul>
    </li>
    <li>
              <h3>Ⅴ-1　考察</h3>
                      <ul>
-                        <li>(1)「評価・改善する『情報活用能力』」の高まり<a href ="https://tkby.github.io/micra.github.io/V1kosatsu1.html">→</a>
-                        <li>(2)「随時振り返り」と「総括振り返り」の違い<a href ="https://tkby.github.io/micra.github.io/V1kosatsu2.html">→</a>
+                        <li>(1)「評価・改善する『情報活用能力』」の高まり<a href ="https://tkby.github.io/micra.github.io/V1kosatsu1.html">→詳細はコチラ</a>
+                        <li>(2)「随時振り返り」と「総括振り返り」の違い<a href ="https://tkby.github.io/micra.github.io/V1kosatsu2.html">→詳細はコチラ</a>
            　　　　　 </ul>
            <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について</h3>
-           <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></p>
+           <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→詳細はコチラ</a></p>
                      <ul>
-                        <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/micrajittaichosa.html">→</a>
-                        <li>(2)検証授業（第１回～３回）<a href ="https://tkby.github.io/micra.github.io/micrakensho.html">→</a>
+                        <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/micrajittaichosa.html">→詳細はコチラ</a>
+                        <li>(2)検証授業（第１回～３回）<a href ="https://tkby.github.io/micra.github.io/micrakensho.html">→詳細はコチラ</a>
                         <li>(3)検証方法
                            <ul>
-                              <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
+                              <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→詳細はコチラ</a>
                               <li>②授業観察・制作物・記述
                            </ul>
                      </ul>
            <h3>Ⅳ-2 結果</h3>
                       <ul>
-                         <li>(1)情報活用」能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/56joche.html">→</a>
-                         <li>(2)商店街と制作物のプロフィールによる振り返りより<a href ="https://tkby.github.io/micra.github.io/IV2_2.html">→</a>
-                         <li>(3)児童の記述より<a href ="https://tkby.github.io/micra.github.io/IV2_4.html">→</a>
+                         <li>(1)情報活用」能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/56joche.html">→詳細はコチラ</a>
+                         <li>(2)商店街と制作物のプロフィールによる振り返りより<a href ="https://tkby.github.io/micra.github.io/IV2_2.html">→詳細はコチラ</a>
+                         <li>(3)児童の記述より<a href ="https://tkby.github.io/micra.github.io/IV2_4.html">→詳細はコチラ</a>
                       </ul>
            <h3>Ⅴ-2 考察</h3>
                       <ul>
-                          <li>(1)「評価・改善する『情報活用能力』の高まり<a href ="https://tkby.github.io/micra.github.io/V2kosatsu1.html">→</a>
+                          <li>(1)「評価・改善する『情報活用能力』の高まり<a href ="https://tkby.github.io/micra.github.io/V2kosatsu1.html">→詳細はコチラ</a>
                           <li>(2)有効だった振り返り<ul>
-                          <li>①パフォーマンス評価による振り返り<a href ="https://tkby.github.io/micra.github.io/performance.html">→</a>
-                          <li>②SD法によるプロフィールを活用した振り返り<a href ="https://tkby.github.io/micra.github.io/micrakaizen.html">→</a>
-                          <li>③作文による振り返り<a href ="https://tkby.github.io/micra.github.io/micrakosatsu.html">→</a>
+                          <li>①パフォーマンス評価による振り返り<a href ="https://tkby.github.io/micra.github.io/performance.html">→詳細はコチラ</a>
+                          <li>②SD法によるプロフィールを活用した振り返り<a href ="https://tkby.github.io/micra.github.io/micrakaizen.html">→詳細はコチラ</a>
+                          <li>③作文による振り返り<a href ="https://tkby.github.io/micra.github.io/micrakosatsu.html">→詳細はコチラ</a>
                        </ul>
                       </ul>
-           <h3>Ⅵ　まとめ<a href ="https://tkby.github.io/micra.github.io/matome.html">→</a></h3>
+           <h3>Ⅵ　まとめ<a href ="https://tkby.github.io/micra.github.io/matome.html">→詳細はコチラ</a></h3>
                        <ul>
                           <li>1 成果
                           <li>2 課題
                        </ul>
-            <h3>注釈及び引用・参考文献<a href ="https://tkby.github.io/micra.github.io/inyosanko.html">→</a></h3>
+            <h3>注釈及び引用・参考文献<a href ="https://tkby.github.io/micra.github.io/inyosanko.html">→詳細はコチラ</a></h3>
      <small>© 2021 Created by Yoshinori Takebayashi</small>
          </li>
        </ul>
