--- a/kagami.html
+++ b/kagami.html
@@ -86,8 +86,14 @@
  
                          <ul>
                              <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→詳細はコチラ</a>
+                                      <div><a href ="https://tkby.github.io/micra.github.io/projoche.html"><img src="https://tkby.github.io/micra.github.io/icon13.jpg" alt="情チェ2" width="10%"></a></div> 
+
                              <li>②例題プログラム<a href ="https://tkby.github.io/micra.github.io/reidaipgm.html">→詳細はコチラ</a>
-                             <li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/oyopgm.html">→詳細はコチラ</a>
+                               <div><a href ="https://tkby.github.io/micra.github.io/reidaipgm.html"><img src="https://tkby.github.io/micra.github.io/icon14.jpg" alt="例題・応用" width="10%"></a></div> 
+
+                            <li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/oyopgm.html">→詳細はコチラ</a>
+                                <div><a href ="https://tkby.github.io/micra.github.io/oyopgm.html"><img src="https://tkby.github.io/micra.github.io/icon14.jpg" alt="例題・応用" width="10%"></a></div> 
+
                              <li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/pgmskill.html">→詳細はコチラ</a>
                              <li>⑤授業観察・制作物
                          </ul>
