--- a/kagami.html
+++ b/kagami.html
@@ -95,6 +95,7 @@
                                 <div><a href ="https://tkby.github.io/micra.github.io/oyopgm.html"><img src="https://tkby.github.io/micra.github.io/icon14.jpg" alt="例題・応用" width="30%"></a></div> 
 
                              <li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/pgmskill.html">→詳細はコチラ</a>
+                                <div><a href ="https://tkby.github.io/micra.github.io/oyopgm.html"><img src="https://tkby.github.io/micra.github.io/icon15.jpg" alt="例題・応用" width="30%"></a></div> 
                              <li>⑤授業観察・制作物
                          </ul>
                   </ul>
