--- a/kagami.html
+++ b/kagami.html
@@ -97,16 +97,22 @@
                              <li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/pgmskill.html">→詳細はコチラ</a>
                                 <div><a href ="https://tkby.github.io/micra.github.io/oyopgm.html"><img src="https://tkby.github.io/micra.github.io/icon15.jpg" alt="例題・応用" width="75%"></a></div> 
                              <li>⑤授業観察・制作物
+                                
                          </ul>
                   </ul>
    
              <h3>Ⅳ-1 結果</h3>
                    <ul>
                        <li>(1)情報活用能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/34joche.html">→詳細はコチラ</a>
+                           <div><a href ="https://tkby.github.io/micra.github.io/34joche.html"><img src="https://tkby.github.io/micra.github.io/icon13.jpg" alt="情チェ・結果" width="75%"></a></div> 
                        <li>(2)例題とプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/reidaiwriai.html">→詳細はコチラ</a>
+                           <div><a href ="https://tkby.github.io/micra.github.io/reidaiwriai.html"><img src="https://tkby.github.io/micra.github.io/icon14.jpg" alt="例題・応用" width="75%"></a></div> 
                        <li>(3)応用テストプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/oyowariai.html">→詳細はコチラ</a>
+                          <div><a href ="https://tkby.github.io/micra.github.io/oyowariai.html"><img src="https://tkby.github.io/micra.github.io/icon14.jpg" alt="例題・応用" width="75%"></a></div> 
                        <li>(4)プログラミングスキルチェックより<a href ="https://tkby.github.io/micra.github.io/pgmskillscore.html">→詳細はコチラ</a>
+                           <div><a href ="https://tkby.github.io/micra.github.io/pgmskillscore.html"><img src="https://tkby.github.io/micra.github.io/icon15.jpg" alt="例題・応用" width="75%"></a></div> 
                        <li>(5)授業観察・制作物より<a href ="https://tkby.github.io/micra.github.io/IV1_5.html">→詳細はコチラ</a>
+                          <div><a href ="https://tkby.github.io/micra.github.io/pgmskillscore.html"><img src="https://tkby.github.io/micra.github.io/icon16.jpg" alt="例題・応用" width="75%"></a></div> 
                    </ul>
    </li>
    <li>
