--- a/kagami.html
+++ b/kagami.html
@@ -115,7 +115,11 @@
              <h3>Ⅴ-1　考察</h3>
                      <ul>
                         <li>(1)「評価・改善する『情報活用能力』」の高まり<a href ="https://tkby.github.io/micra.github.io/V1kosatsu1.html">→詳細はコチラ</a>
+                           <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon17.jpg" alt="情チェ考察" width="75%"></a></div> 
+
                         <li>(2)「随時振り返り」と「総括振り返り」の違い<a href ="https://tkby.github.io/micra.github.io/V1kosatsu2.html">→詳細はコチラ</a>
+                            <div><a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html"><img src="https://tkby.github.io/micra.github.io/icon19.jpg" alt="振り返り" width="75%"></a></div> 
+
            　　　　　 </ul>
            <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について</h3>
            <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→詳細はコチラ</a></p>
