--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -18,6 +18,7 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>活動の概要説明（プログラミングの学習活動）</h1>
+   <p>本研究では，市内で導入済みのビジュアルプログラミング学習環境「きょうしつでビスケット」を活用した。４回の授業で命令数が４つ～６つの４種類のプログラム作りを通常の授業時間（４５分）で行った。また振り返りのパターンを２種類準備し，命令１つごとに振り返り，児童の発見を優先する流れを「随時振り返り」型，お手本通りに作って完成をしてから振り返る流れを「総括振り返り」型と命名した。第１～４学年で同一のプログラミング活動を実施し，児童の情報活用能力の変容を見取り，どのような効果があったかを明らかにした。</p>
    <table border="1"cellspacing="0" bordercolor="#333" width="98%">
            <tr align="center">
              <th width="20%"><b>回</b></th>
