--- a/kagami.html
+++ b/kagami.html
@@ -4,9 +4,9 @@
    <meta charset="utf-8">
   <!--6/19viewport仮設定-->
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>マインクラフトで町づくり</title>
-  <meta content="小学校でのマインクラフトを活用した教育実践事例です。" name="description">
-  <meta content="小学校,マインクラフト,授業" name="keywords">               
+  <title>評価・改善する「情報活用能力」</title>
+  <meta content="小学校でビスケット/マインクラフトを活用した教育実践事例です。" name="description">
+  <meta content="小学校,ビスケット，プログラミング教育，マインクラフト,授業" name="keywords">               
   <link rel="stylesheet" href="stylesheet.css">
 <style type="text/css">
 .box-list{
